   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.58
 ============

 Released on 
  
 New features and improvements:

   - RecurrentOperation: DB Model v3.
   - VAT: put its own icon on operation templates pages (todo #1138). 
 
 Bug fixes:

   - EntryPage: fix new entry insertion (todo #1133).
   - ReconciliationPage: fix debit vs. credit comparison (todo #1132).
   - RecurrentOperations: fix amount update on newly generated record (todo #1135). 
   - RecurrentOperations: review index to allow many cancelled operations (todo #1137).
   - VATDeclaration: computes with actual rounded numbers (todo #1134). 

 Other changes:

   - my_double_round_to_decimals(): new function.
   - RecurrentOperations: set the icon slightly smaller (todo #1138).

-----------------------------------------------------------------------
 Version 0.57
 ============

 Released on 2016-05-17
  
 New features and improvements:

   - Recurrent DB Model v 2.
   - Account: only detail account may be closed (todo #1129).
   - BatUtils: display an error message if appropriate.
   - Entry: associate an operation number when appropriate (todo #1123).
   - GuidedInputBin: row number is italic (todo #1109).
   - GuidedInputBin: review account column width (todo #1108).
   - GuidedInputBin: review account tooltip and message area (todo #1114).
   - GuidedInputBin: review amount column width (todo #1115).
   - Miscellaneous menu: have an option to display the collector content (todo #562).
   - Miscellaneous menu: have an option to display the audit trace (todo #732).
   - myICollector: cleanup the stores at end.
   - OpeTemplate: have an indicator as used by a recurrent model (todo #1117).
   - OpeTemplateProperties: account tooltip is account label (todo #1105).